News UAT/force-app/main/default/objects/Question__c/fields/Answer_Format__c.field-meta.xml
<CustomField>
    <fullName>Answer_Format__c</fullName>
    <label>Answer Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Radio Predefined</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Text Area</fullName>
            </value>
            <value>
                <fullName>Multi Select</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>