News UAT/force-app/main/default/objects/Question__c/fields/Briefing_Form__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Form__c</fullName>
    <label>Briefing Form Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>