News UAT/force-app/main/default/objects/Question__c/fields/Mandatory_For__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_For__c</fullName>
    <label>Mandatory For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>