News UAT/force-app/main/default/objects/Question__c/fields/Output_Opportunity_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Output_Opportunity_Mapping__c</fullName>
    <label>Output Opportunity Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>