News UAT/force-app/main/default/objects/Question__c/fields/Predefined_Offered_Answers__c.field-meta.xml
<CustomField>
    <fullName>Predefined_Offered_Answers__c</fullName>
    <label>Predefined Offered Answers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>