News UAT/force-app/main/default/objects/Question__c/validationRules/Fill_Mandatory_For.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_Mandatory_For</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Mandatory__c = True &amp;&amp; ISNULL(Mandatory_For__c), True, False)</errorConditionFormula>
    <errorDisplayField>Mandatory_For__c</errorDisplayField>
    <errorMessage>When filling Mandatory field, it&#39;s required to fill Mandatory For field.</errorMessage>
</ValidationRule>