News UAT/force-app/main/default/objects/Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question_Text__c</columns>
    <columns>Answer_Format__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Section_Name__c</columns>
    <columns>Sequence__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>