News UAT/force-app/main/default/objects/Question__c/listViews/All_in_YouTube_Order_Form.listView-meta.xml
<ListView>
    <fullName>All_in_YouTube_Order_Form</fullName>
    <columns>NAME</columns>
    <columns>Question_Text__c</columns>
    <columns>Answer_Format__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Section_Name__c</columns>
    <columns>Sequence__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Section_Name__c</field>
        <operation>contains</operation>
        <value>YouTube</value>
    </filters>
    <label>All in YouTube Order Form</label>
</ListView>